--- a/src/components/Home/index.scss
+++ b/src/components/Home/index.scss
@@ -18,9 +18,9 @@
 
     &:before {
       content: '<h1>';
-      font-family: 'Basis 33';
+      font-family: 'Source Code Pro';
       color: #ffd700;
-      font-size: 18px;
+      font-size: 14px;
       position: absolute;
       margin-top: -40px;
       left: -15px;
@@ -29,9 +29,9 @@
 
     &:after {
       content: '<h1/>';
-      font-family: 'Basis 33';
+      font-family: 'Source Code Pro';
       color: #ffd700;
-      font-size: 18px;
+      font-size: 14px;
       position: absolute;
       margin-top: 18px;
       margin-left: 20px;
