--- a/src/components/Sidebar/index.scss
+++ b/src/components/Sidebar/index.scss
@@ -98,6 +98,12 @@
       }
     }
 
+    a.skills-link {
+      &:after {
+        content: 'SKILLS';
+      }
+    }
+
     a.portfolio-link {
       &:after {
         content: 'PORTFOLIO';
