--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Source+Code+Pro:wght@400;900&display=swap');
 html {
   font-size: 62.5%;
 }
 
 body {
   margin: 0;
-  font: 300 11px/1.4 'Helvetica Neue', sans-serif;
+  font: 300 11px/1.4 "Helvetica Neue", sans-serif;
   color: #444;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  /* background: #0F0F3B; */
+  background: #0f0f3b;
   overflow: hidden;
   display: block;
-  background-size: 300% 300%;
+  /* background-size: 300% 300%;
   background-image: linear-gradient(
     -45deg,
     rgba(36, 32, 56, 1) 0%,
@@ -19,7 +20,7 @@ body {
     rgba(10, 36, 99, 1) 51%,
     rgba(15, 15, 59, 1) 100%
   );
-  animation: AnimateBG 20s ease infinite;
+  animation: AnimateBG 20s ease infinite; */
 }
 @keyframes AnimateBG {
   0% {
