--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -75,14 +75,17 @@
 
 .map-wrap {
   background: rgba(8, 253, 216, 0.1);
-  float: right;
+  // float: right;
   width: 53%;
+  left: 60%;
+  position: absolute;
   height: 115%;
   margin-top: -3%;
 }
 
 .leaflet-container {
   position: relative;
+  
   width: 100%;
   height: 100%;
   opacity: 0;
@@ -94,7 +97,7 @@
   position: absolute;
   background: #000;
   top: 50px;
-  right: 30%;
+  right: 18%;
   z-index: 999999;
   width: 267px;
   padding: 20px;
